# ChroniNotes

./: .gitignore  CHANGELOG.md  PRIVACY_POLICY.md  PR_REPORT.md  README.md  electron-builder.json5  package-lock.json  package.json  rebuild-icons.js  run-project.bat  run-tauri-build.bat  run-tauri-dev.bat  setup.bat  setup.sh
.github/workflows/: release.yml
backend/: package-lock.json  package.json  tsconfig.json
backend/src/: main.ts  preload.ts
backend/src/db/: index.ts
backend/src/ipc/: calendar.ipc.ts  index.ts  notes.ipc.ts  pomodoro.ipc.ts  tasks.ipc.ts  time.ipc.ts  timer-presets.ipc.ts
backend/src/services/: notification.service.ts  pomodoro.service.ts  time.service.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ActivityHeatmap.tsx  BrandLogo.tsx  CalendarMiniWidget.tsx  SpotifyPlayer.tsx  UpdateChecker.tsx  WelcomeScreen.tsx
frontend/src/components/editor/: RichEditor.tsx
frontend/src/components/layout/: Sidebar.tsx  Topbar.tsx  UserProfileCard.tsx
frontend/src/components/notes/: NotesSidebar.tsx
frontend/src/lib/: sounds.ts  tauri-bridge.ts
frontend/src/pages/: About.tsx  Calendar.tsx  Countdown.tsx  Dashboard.tsx  Habits.tsx  Notes.tsx  Settings.tsx  Tasks.tsx  Timer.tsx
frontend/src/store/: calendar.store.ts  habits.store.ts  notes.store.ts  spotify.store.ts  tasks.store.ts  theme.store.ts  timer.store.ts  user.store.ts
frontend/src/types/: electron.d.ts  env.d.ts  spotify-web-playback-sdk.d.ts  tauri-bridge.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  notifications.rs  updater.rs
src-tauri/src/commands/: calendar.rs  habits.rs  mod.rs  notes.rs  spotify.rs  tasks.rs  timer.rs  timer_presets.rs
