[package]
name = "chroninotes"
version = "3.0.0"
description = "Offline-first desktop productivity assistant for students"
authors = ["Samarth Bhogre"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }
dotenvy = "0.15"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.33", features = ["bundled"] }
tauri = { version = "2.10.0", features = ["image-ico", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"], default-features = false }
url = "2"
tempfile = "3"
regex-lite = "0.1"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tiny_http = "0.12"
webbrowser = "1"

raw-window-handle = "0.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
